<resources>
    <string name="app_name">Share Ideas</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="note_title">Note title</string>
    <string name="note_text">Note text</string>
    <string name="nav_share_message">Don\'t you think you have shared enough</string>
    <string name="nav_send">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preferences -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_title_email">Email address</string>
    <string name="pref_default_email">yourName@host.com</string>
    <string name="pref_title_favorite_social">Favorite social network</string>
    <string name="pref_default_favorite_social">www.linkedin.com</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_set_reminder">Set reminder</string>
    <string name="btn_add_note">Add note</string>
</resources>
